# riscv-opcodes

./: .gitignore  Makefile  parse.sh  pyproject.toml
src/riscv_opcodes/: constants.py  parse.py  test.py
